--- a/basic.styl
+++ b/basic.styl
@@ -270,3 +270,8 @@ tile-padding()
         padding-top 30px
     .main
         border-top-width 10px
+
+/* Actualities to right */
+.rcf-tag-actualities
+    .page.page--index
+        mragain-left 0
