Added support for customizable font size, family and Google fonts.

--- a/basic.styl
+++ b/basic.styl
@@ -51,13 +51,15 @@ input-recolor()
 /* Fonts */
 
 .rcf-tag-fonts
-    font-size 16px
-    
     .article__heading--content
         font-size 110%
 
     .discussion__topics
         font-size 110%
+        
+    .detail__article.urs, .detail__perex
+    .detail__article
+        font-size 1rem
 
 /* Background */
 
