Fixed leading lines in comments.

--- a/basic.styl
+++ b/basic.styl
@@ -270,6 +270,7 @@ input-recolor()
     .opinions-comment__content
         border-top-color richBgColorHover
         margin-bottom - bottom-space-reduce-size
+        position relative
         
     .opinions-comment-user-donor-type
         opacity 0.1
