Added option to remove AdBlock "nagger" (whining giant yellow overlay).

--- a/basic.styl
+++ b/basic.styl
@@ -867,3 +867,7 @@ tile-padding()
     
     .discussion__topics.rcf-topics-second-half + *
         clear both
+
+.rcf-tag-remove-adblock-nagger
+    #adblockMessage
+        display none
