Fixed (= removed) narrow articles "feature".

--- a/basic.styl
+++ b/basic.styl
@@ -398,6 +398,9 @@ tile-padding()
         
     .promotips__item:hover
         background-color richBgColor
+        
+    .layout-article-content
+        max-width unset
 
 .rcf-tag-floating-article-info
     #articleInfo.fixed
@@ -867,6 +870,8 @@ tile-padding()
     
     .discussion__topics.rcf-topics-second-half + *
         clear both
+
+/* AdBlock nagger */
 
 .rcf-tag-remove-adblock-nagger
     #adblockMessage
