Recolored "enter discussion" button and "read more" notification.
Updated packages (fixes crashes in Node 6).

--- a/basic.styl
+++ b/basic.styl
@@ -172,6 +172,17 @@ input-recolor()
         top -70px
         opacity 0.3
         pointer-events none
+        
+    .component--opinions-module--enter-opinions-link
+        a
+            button-recolor()
+    
+    .js-related-texts-moving-layer
+        rich-element-recolor()
+        .related-texts-moving-layer__text
+            color textColor
+        .related-texts-moving-layer__close .icon-close
+            fill richTextColor
 
 /* Comments (text) */
 
